<?xml version="1.0" encoding="UTF-8" ?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Details.MoviesDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/details_iv_back"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/venom" />

        <ImageButton
            android:id="@+id/details_btn_download"
            android:layout_width="48dp"
            android:layout_height="46dp"
            android:layout_alignBottom="@+id/details_iv_back"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="12dp"
            android:background="#00000000"
            android:src="@drawable/downloader" />

        <ImageView
            android:id="@+id/details_iv_image"
            android:layout_width="116dp"
            android:layout_height="175dp"
            android:layout_below="@+id/details_iv_back"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/venom2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/details_iv_image"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_toEndOf="@+id/details_iv_image"
            android:layout_toRightOf="@+id/details_iv_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/infinity_war_title"
                android:textColor="#000"
                android:textSize="19dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/details_tv_released"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="start"
                    android:text="@string/details_release_text"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/details_tv_released_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:gravity="start"
                    android:text="@string/infinity_war_release_date"
                    android:textSize="16sp"
                    tools:text="2018-01-01" />
            </LinearLayout>

            <Button
                android:id="@+id/details_btn_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/details_trailer_text" />


        </LinearLayout>

        <TextView
            android:id="@+id/details_tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/details_iv_image"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:text="@string/details_overview_text"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/details_tv_overview_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/details_tv_overview"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:text="@string/infinity_war_overview"
            android:textSize="14sp" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
